--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sign-Up</title>
+  <link href="styles/normalize.css" rel="stylesheet">
+  <link href="styles/style.css" rel="stylesheet">
 </head>
 <body>
-  
+  <h1>Sign Up</h1>
 </body>
+<script src="scripts/script.js"></script>
 </html>
