--- a/index.html
+++ b/index.html
@@ -9,7 +9,42 @@
   <link href="styles/style.css" rel="stylesheet">
 </head>
 <body>
-  <h1>Sign Up</h1>
+  <div>
+    <div>
+      <div>
+        <span>Odin</span>
+      </div>
+      <p>Photo by X on X</p>
+    </div>
+  </div>
+<div>
+  <p>
+    This a form that can be used to send your data nowhere.
+  </p>
+  <p>
+    Go ahead and fill it out now.
+  </p>
+</div>
+<div>
+  <form action="" method="POST">
+    <div><label for="first">First Name</label>
+      <input id="first" name="first" type="text" required/></div>
+    <div><label for="last">Last Name</label>
+      <input id="last" name="last" type="text" required/></div>
+    <div><label for="email">Email</label>
+      <input id="email"name="email"  type="email" required/></div>
+    <div><label for="phone">Phone Number</label>
+      <input id="phone" name="phone"  type="tel" required/></div>
+    <div><label for="password">Password</label>
+      <input id="password"name="password"  type="password" required/></div>
+    <div><label for="confirm">Confirm Password</label>
+      <input id="confirm" name="confirm" type="password" required/></div>
+    <input type="submit" value="Create Account"/>
+  </form>
+</div>
+<div>
+  <p>Already have an account? X</p>
+</div>
 </body>
 <script src="scripts/script.js"></script>
 </html>
