style form inputs

--- a/index.html
+++ b/index.html
@@ -10,17 +10,15 @@
 </head>
 <body>
   <div id="left">
-    <div>
-      <div id="logo">
-        <img src="odin-lined.png"><span>Odin</span>
-      </div>
-      <p>Photo by <a href="http://unsplash.com/@haliewestphoto">Halie West</a> on <a href="http://unsplash.com">Unsplash</a></p>
+    <div id="logo">
+      <img src="odin-lined.png"><span>Odin</span>
     </div>
+    <p>Photo by <a href="http://unsplash.com/@haliewestphoto">Halie West</a> on <a href="http://unsplash.com">Unsplash</a></p>
   </div>
 <div id="right">
   <div>
     <p>
-      This a form that can be used to send your data nowhere.
+      This a form that can be used to send your data nowhere. It does not use javascript like the previous form project.
     </p>
     <p>
       Go ahead and try it out now.
@@ -28,39 +26,37 @@
   </div>
   <div>
     <form action="" method="POST">
-      <fieldset>
-        <legend>This is the Form!</legend>
-        <div>
-          <label for="first">First Name</label>
-          <input id="first" name="first" type="text" required>
-          <p>* First Name is required</p>
+      <div class="form-banner">
+        <p>This is the Form!</p>
+        <div class="form-grid">
+          <div class="input-field">
+            <label for="first">First Name</label>
+            <input id="first" name="first" type="text" required>
+          </div>
+          <div class="input-field">
+            <label for="last">Last Name</label>
+            <input id="last" name="last" type="text" required>
+          </div>
+          <div class="input-field">
+            <label for="email">Email</label>
+            <input id="email"name="email"  type="email" required>
+          </div>
+          <div class="input-field">
+            <label for="phone">Phone Number</label>
+            <input id="phone" name="phone"  type="tel" required>
+          </div>
+          <div class="input-field">
+            <label for="password">Password</label>
+            <input id="password"name="password"  type="password" required>
+            <p>* A password is required</p>
+          </div>
+          <div class="input-field">
+            <label for="confirm">Confirm Password</label>
+            <input id="confirm" name="confirm" type="password" required>
+            <p>* A password confirmation is required</p>
+          </div>
         </div>
-        <div>
-          <label for="last">Last Name</label>
-          <input id="last" name="last" type="text" required>
-          <p>* Last name is required</p>
-        </div>
-        <div>
-          <label for="email">Email</label>
-          <input id="email"name="email"  type="email" required>
-          <p>* Enter a valid email</p>
-        </div>
-        <div>
-          <label for="phone">Phone Number</label>
-          <input id="phone" name="phone"  type="tel" required>
-          <p>* A phone number is required</p>
-        </div>
-        <div>
-          <label for="password">Password</label>
-          <input id="password"name="password"  type="password" required>
-          <p>* A password is required</p>
-        </div>
-        <div>
-          <label for="confirm">Confirm Password</label>
-          <input id="confirm" name="confirm" type="password" required>
-          <p>* Passwords must match</p>
-        </div>
-      </fieldset>
+      </div>
       <input type="submit" value="Create Account"/>
     </form>
   </div>
