more styling, acceptable stopping point

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     <div id="logo">
       <img src="odin-lined.png"><span>Odin</span>
     </div>
-    <p>Photo by <a href="http://unsplash.com/@haliewestphoto">Halie West</a> on <a href="http://unsplash.com">Unsplash</a></p>
+    <p class="footer-text">Photo by <a href="http://unsplash.com/@haliewestphoto">Halie West</a> on <a href="http://unsplash.com">Unsplash</a></p>
   </div>
 <div id="right">
-  <div>
+  <div class="blurb">
     <p>
       This a form that can be used to send your data nowhere. It does not use javascript like the previous form project.
     </p>
@@ -48,19 +48,19 @@
           <div class="input-field">
             <label for="password">Password</label>
             <input id="password"name="password"  type="password" required>
-            <p>* A password is required</p>
+            <p class="form-error">* A password is required</p>
           </div>
           <div class="input-field">
             <label for="confirm">Confirm Password</label>
             <input id="confirm" name="confirm" type="password" required>
-            <p>* A password confirmation is required</p>
+            <p class="form-error">* A password confirmation is required</p>
           </div>
         </div>
       </div>
       <input type="submit" value="Create Account"/>
     </form>
   </div>
-  <div>
+  <div class="login">
     <p>Already have an account? <a href="">Log In</a></p>
   </div>
 </div>
